Avance de invitado

--- a/registro.html
+++ b/registro.html
@@ -226,7 +226,7 @@
           return d ? JSON.parse(d) : null;
         },
       };
-      if (EBECO.isAuthed()) location.href = "seleccionar-accion.html";
+      //if (EBECO.isAuthed()) location.href = "seleccionar-accion.html";
 
       // ----------------- MÓDULO FACIAL INLINE -----------------
       const MODEL_URL = "assets/models";
