--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         opacity: 0.8;
         margin-top: 8px;
       }
+      /* Opcional: estética del botón salir */
       .btn--ghost {
         background: transparent;
         border: 1px solid #225d26;
@@ -33,14 +34,10 @@
         cursor: pointer;
         transition: background 0.2s ease, color 0.2s ease;
       }
+
       .btn--ghost:hover {
         background: #225d26;
         color: #fff;
-      }
-      .actions {
-        display: flex;
-        flex-direction: column;
-        gap: 0.5rem;
       }
     </style>
   </head>
@@ -72,34 +69,16 @@
             Protege tu bicicleta con la solución eco-segura con precios
             accesibles.
           </p>
-          <p
-            class="welcome__subtitle"
-            style="font-weight: bold; padding-top: 1rem"
-          >
-            Inicia sesión para ver los planes
-          </p>
         </div>
 
         <div class="actions">
-          <!-- Solo cambia la etiqueta: Comenzar -> Iniciar sesión -->
           <button
             id="btnStart"
             class="btn btn--primary btn--lg"
-            aria-label="Iniciar sesión"
+            aria-label="Comenzar"
           >
-            Iniciar sesión
+            Comenzar
           </button>
-
-          <!-- NUEVO: Entrar como invitado (no elimina nada previo) -->
-          <button
-            id="btnGuest"
-            class="btn btn--secondary btn--lg"
-            aria-label="Entrar como invitado"
-            style="background-color: dodgerblue"
-          >
-            Entrar como invitado
-          </button>
-
           <div id="msg" class="hint" aria-live="polite">Sin conexión</div>
         </div>
       </section>
@@ -110,9 +89,7 @@
 
       <!-- Botón global para cerrar sesión (solo si hay sesión) -->
       <div style="margin-top: 1rem; text-align: center">
-        <button id="logoutBtn" class="btn--ghost" style="display: none">
-          Cerrar sesión
-        </button>
+        <button id="logoutBtn">Cerrar sesión</button>
       </div>
     </main>
 
@@ -129,37 +106,38 @@
       document.getElementById("year").textContent = new Date().getFullYear();
 
       const btn = document.getElementById("btnStart");
-      const btnGuest = document.getElementById("btnGuest");
       const msg = document.getElementById("msg");
       const logoutBtn = document.getElementById("logoutBtn");
       const userBar = document.getElementById("userBar");
       const userGreeting = document.getElementById("userGreeting");
 
-      // Si hay sesión, muestra saludo y botón salir (MISMO COMPORTAMIENTO)
+      // Si hay sesión, muestra saludo y botón salir
       (function hydrateUserBar() {
-        if (EBECO.isAuthed && EBECO.isAuthed()) {
-          const user = EBECO.getCurrentUser ? EBECO.getCurrentUser() : null;
-          if (user) {
-            userGreeting.textContent = `Hola, ${user.name}`;
-            userBar.style.display = "block";
-            logoutBtn.style.display = "inline-flex";
-          }
+        const user = EBECO.getCurrentUser ? EBECO.getCurrentUser() : null;
+
+        if (user && user.name) {
+          userGreeting.textContent = `Hola, ${user.name}`;
+          userBar.style.display = "block";
+          logoutBtn.style.display = "inline-flex";
+        } else {
+          userBar.style.display = "none";
+          // ❌ NO ocultes el botón
+          // logoutBtn.style.display = "none";
+          logoutBtn.style.display = "inline-flex"; // o quita esta línea y no lo toques
         }
       })();
 
-      // Cerrar sesión (MISMO)
+      // Cerrar sesión
       logoutBtn.addEventListener("click", () => {
         EBECO.logoutUser && EBECO.logoutUser();
-        localStorage.removeItem("ebeco-guest");
         alert("Sesión cerrada correctamente.");
-        location.reload();
+        location.reload(); // recarga index sin sesión
       });
 
       function setMsg(t) {
         msg.textContent = t;
       }
 
-      // === MISMO handleStart que ya tenías (NO BORRADO) ===
       async function handleStart() {
         // Si NO está autenticado, directo a login
         if (!EBECO.isAuthed || !EBECO.isAuthed()) {
@@ -167,7 +145,6 @@
           return;
         }
 
-        // Si está autenticado: intenta permiso Web Serial y continúa
         const NEXT_URL = "seleccionar-accion.html";
 
         if (!("serial" in navigator)) {
@@ -184,11 +161,10 @@
           const grantedPorts = await navigator.serial.getPorts();
           if (grantedPorts.length > 0) {
             localStorage.setItem("ebeco-serial-permission", "granted");
-          } else {
-            const port = await navigator.serial.requestPort();
-            if (port)
-              localStorage.setItem("ebeco-serial-permission", "granted");
+            return;
           }
+          const port = await navigator.serial.requestPort();
+          if (port) localStorage.setItem("ebeco-serial-permission", "granted");
         } catch (err) {
           console.warn("Permiso no concedido:", err?.name || err);
           localStorage.removeItem("ebeco-serial-permission");
@@ -198,39 +174,7 @@
         }
       }
 
-      // === NUEVO: Invitado SIN tocar el flujo anterior ===
-      async function handleGuest() {
-        // Marca de invitado (útil si quieres limitar funciones luego)
-        localStorage.setItem("ebeco-guest", "1");
-        const NEXT_URL = "seleccionar-accion.html";
-
-        // Intento NO BLOQUEANTE de permiso Web Serial (opcional)
-        if ("serial" in navigator) {
-          try {
-            setMsg("Comprobando permisos de puerto…");
-            const granted = await navigator.serial.getPorts();
-            if (!granted.length) {
-              await navigator.serial.requestPort();
-            }
-            localStorage.setItem("ebeco-serial-permission", "granted");
-          } catch {
-            // si cancela o falla, seguimos como invitado igual
-          }
-        } else {
-          setMsg(
-            "Tu navegador no soporta Web Serial. Continuando sin hardware…"
-          );
-        }
-
-        window.location.href = NEXT_URL;
-      }
-
-      document
-        .getElementById("btnStart")
-        .addEventListener("click", handleStart);
-      document
-        .getElementById("btnGuest")
-        .addEventListener("click", handleGuest);
+      btn.addEventListener("click", handleStart);
     </script>
   </body>
 </html>
