--- a/seleccionar-accion.html
+++ b/seleccionar-accion.html
@@ -1,6 +1,5 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
-<<<<<<< HEAD
   <head>
     <meta charset="utf-8" />
     <meta
@@ -9,21 +8,10 @@
     />
     <title>EBECO — Seleccionar acción</title>
     <link rel="stylesheet" href="styles.css" />
-    <style>
-      /* Banner de bienvenida */
-      .welcome-banner {
-        margin: 0.25rem 0 0.75rem 0;
-        padding: 0.5rem 0.75rem;
-        border-radius: 0.5rem;
-        background: #f1f5f9;
-        color: #0f172a;
-        font-weight: 600;
-      }
-    </style>
   </head>
   <body class="app">
     <main class="screen">
-      <!-- Topbar -->
+      <!-- Topbar reutilizable -->
       <header class="topbar" role="banner">
         <button
           class="btn btn--ghost"
@@ -47,92 +35,45 @@
           "
         />
       </header>
-=======
-<head>
-  <meta charset="utf-8" />
-  <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1, viewport-fit=cover"
-  />
-  <title>EBECO — Seleccionar acción</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body class="app">
-  <main class="screen">
-    <!-- Topbar reutilizable -->
-    <header class="topbar" role="banner">
-    <button class="btn btn--ghost" onclick="history.back()" aria-label="Volver">←</button>
-    <h1 class="topbar__title" style="flex:1">EBECO</h1>
-    <img src="assets/logo-ebeco.png" 
-        alt="Logo EBECO" 
-        class="brand__logo"
-        style="width:80px;height:80px;object-fit:contain;border-radius:50%;background:transparent;box-shadow:none" />
-    </header>
->>>>>>> parent of 8ebda87 (Historial y flujo)
 
-
-<<<<<<< HEAD
-        <!-- Banner de bienvenida -->
-        <div
-          id="welcomeBanner"
-          class="welcome-banner"
-          style="display: none"
-        ></div>
+      <section
+        class="card u-grid"
+        aria-labelledby="acciones-title"
+        style="margin-top: 1rem"
+      >
+        <h2 id="acciones-title" style="margin: 0">Seleccionar la acción</h2>
 
         <nav class="list" aria-label="Acciones principales">
-          <!-- Estacionar bicicleta (redirige según rol) -->
-          <a id="linkEstacionar" class="item" href="verify-facial.html">
+          <!-- Estacionar bicicleta -->
+          <a class="item" href="verify-facial.html">
             <div style="display: flex; align-items: center; gap: 0.75rem">
+              <!--<span aria-hidden="true" style="font-size:1.25rem">🔒</span>-->
               <div>
                 <div class="u-bold">Estacionar bicicleta</div>
-                <small id="subEstacionar" class="u-muted">
-                  Bloquea y registra tu bici en un slot
-                </small>
+                <small class="u-muted"
+                  >Bloquea y registra tu bici en un slot</small
+                >
               </div>
-=======
-    <section class="card u-grid" aria-labelledby="acciones-title" style="margin-top:1rem">
-      <h2 id="acciones-title" style="margin:0">Seleccionar la acción</h2>
-
-      <nav class="list" aria-label="Acciones principales">
-        <!-- Estacionar bicicleta -->
-        <a class="item" href="autenticacion.html">
-          <div style="display:flex;align-items:center;gap:.75rem">
-            <!--<span aria-hidden="true" style="font-size:1.25rem">🔒</span>-->
-            <div>
-              <div class="u-bold">Estacionar bicicleta</div>
-              <small class="u-muted">Bloquea y registra tu bici en un slot</small>
->>>>>>> parent of 8ebda87 (Historial y flujo)
             </div>
-          </div>
-          <span aria-hidden="true">›</span>
-        </a>
+            <span aria-hidden="true">›</span>
+          </a>
 
-<<<<<<< HEAD
-          <!-- Liberar bicicleta (solo usuarios logueados) -->
-          <a id="linkLiberar" class="item" href="metodo-pago.html">
+          <!-- Liberar bicicleta -->
+          <a class="item" href="metodo-pago.html">
             <div style="display: flex; align-items: center; gap: 0.75rem">
+              <!--<span aria-hidden="true" style="font-size:1.25rem">🔓</span>-->
               <div>
                 <div class="u-bold">Liberar bicicleta</div>
                 <small class="u-muted">Desbloquea y realiza el pago</small>
               </div>
-=======
-        <!-- Liberar bicicleta -->
-        <a class="item" href="metodo-pago.html">
-          <div style="display:flex;align-items:center;gap:.75rem">
-            <!--<span aria-hidden="true" style="font-size:1.25rem">🔓</span>-->
-            <div>
-              <div class="u-bold">Liberar bicicleta</div>
-              <small class="u-muted">Desbloquea y realiza el pago</small>
->>>>>>> parent of 8ebda87 (Historial y flujo)
             </div>
-          </div>
-          <span aria-hidden="true">›</span>
-        </a>
+            <span aria-hidden="true">›</span>
+          </a>
 
-<<<<<<< HEAD
-          <!-- Historial (solo usuarios logueados) -->
-          <a id="linkHistorial" class="item" href="historial.html">
+          <!-- Historial -->
+          <a class="item" href="historial.html">
             <div style="display: flex; align-items: center; gap: 0.75rem">
+              <!--<span aria-hidden="true" style="font-size:1.25rem">🕘</span>-->
               <div>
                 <div class="u-bold">Historial</div>
                 <small class="u-muted">Ingresos, salidas y pagos</small>
@@ -143,48 +84,20 @@
         </nav>
       </section>
     </main>
-
-    <!-- Carga la API de auth/estado ANTES del script inline -->
-    <script src="app.js"></script>
-
     <script>
       let port, reader, writer;
-=======
-        <!-- Historial -->
-        <a class="item" href="historial.html">
-          <div style="display:flex;align-items:center;gap:.75rem">
-            <!--<span aria-hidden="true" style="font-size:1.25rem">🕘</span>-->
-            <div>
-              <div class="u-bold">Historial</div>
-              <small class="u-muted">Ingresos, salidas y pagos</small>
-            </div>
-          </div>
-          <span aria-hidden="true">›</span>
-        </a>
-      </nav>
-    </section>
-  </main>
-  <script>
-    let port, reader, writer;
->>>>>>> parent of 8ebda87 (Historial y flujo)
 
-    async function openSerialIfGranted(){
-      const msgEl = document.getElementById('serialStatus');
-      function setMsg(t){ if(msgEl) msgEl.textContent = t; }
+      async function openSerialIfGranted() {
+        const msgEl = document.getElementById("serialStatus");
+        function setMsg(t) {
+          if (msgEl) msgEl.textContent = t;
+        }
 
-      if (!('serial' in navigator)) {
-        setMsg?.('Web Serial no disponible. Usa Chrome/Edge.');
-        return;
-      }
-
-      try {
-        const granted = localStorage.getItem('ebeco-serial-permission') === 'granted';
-        if (!granted) {
-          setMsg?.('Sin permiso de puerto. Vuelve a Inicio.');
+        if (!("serial" in navigator)) {
+          setMsg?.("Web Serial no disponible. Usa Chrome/Edge.");
           return;
         }
 
-<<<<<<< HEAD
         try {
           const granted =
             localStorage.getItem("ebeco-serial-permission") === "granted";
@@ -203,6 +116,7 @@
           await port.open({ baudRate: 115200 });
           setMsg?.("Conectado por Serial.");
 
+          // Preparar writer/reader si los necesitas en esta pantalla:
           writer = port.writable?.getWriter?.();
           const textDecoder = new TextDecoder();
 
@@ -223,20 +137,20 @@
             }
           })();
 
+          // Ejemplo: función para enviar líneas
           window.ebecoSend = async (text) => {
             if (!writer) return;
             const data = new TextEncoder().encode(text + "\n");
             await writer.write(data);
           };
 
+          // Cierre ordenado al salir
           window.addEventListener("beforeunload", async () => {
             try {
               if (writer) {
                 writer.releaseLock();
                 writer = null;
               }
-            } catch {}
-            try {
               if (port) {
                 await port.close();
                 port = null;
@@ -246,121 +160,14 @@
         } catch (err) {
           console.error(err);
           setMsg?.("Error al abrir el puerto: " + err.message);
-=======
-        const ports = await navigator.serial.getPorts();
-        if (ports.length === 0) {
-          setMsg?.('No se encontró un puerto concedido. Vuelve a Inicio.');
-          return;
->>>>>>> parent of 8ebda87 (Historial y flujo)
         }
-
-        port = ports[0];
-        await port.open({ baudRate: 115200 });
-        setMsg?.('Conectado por Serial.');
-
-        // Preparar writer/reader si los necesitas en esta pantalla:
-        writer = port.writable?.getWriter?.();
-        const textDecoder = new TextDecoder();
-
-        (async () => {
-          try {
-            const r = port.readable.getReader();
-            while (true) {
-              const { value, done } = await r.read();
-              if (done) break;
-              if (value) {
-                const msg = textDecoder.decode(value);
-                console.log('Arduino:', msg);
-              }
-            }
-            r.releaseLock();
-          } catch (e) {
-            console.warn(e);
-          }
-        })();
-
-        // Ejemplo: función para enviar líneas
-        window.ebecoSend = async (text) => {
-          if (!writer) return;
-          const data = new TextEncoder().encode(text + '\n');
-          await writer.write(data);
-        };
-
-        // Cierre ordenado al salir
-        window.addEventListener('beforeunload', async () => {
-          try {
-            if (writer) { writer.releaseLock(); writer = null; }
-            if (port) { await port.close(); port = null; }
-          } catch {}
-        });
-
-      } catch (err) {
-        console.error(err);
-        setMsg?.('Error al abrir el puerto: ' + err.message);
-      }
-    }
-
-<<<<<<< HEAD
-      // Banner de bienvenida + ruteo por rol
-      function hydrateWelcomeBanner() {
-        const el = document.getElementById("welcomeBanner");
-        const linkHist = document.getElementById("linkHistorial");
-        const linkLiberar = document.getElementById("linkLiberar");
-        const linkEst = document.getElementById("linkEstacionar");
-        const subEst = document.getElementById("subEstacionar");
-        if (!el || !linkEst || !subEst) return;
-
-        const hasApi = !!(
-          window.EBECO && typeof window.EBECO.isAuthed === "function"
-        );
-        const isAuthed = hasApi && window.EBECO.isAuthed();
-
-        // ✅ Si hay sesión, limpia el flag de invitado para evitar confusión
-        if (isAuthed && localStorage.getItem("ebeco-guest") === "1") {
-          localStorage.removeItem("ebeco-guest");
-        }
-
-        if (isAuthed) {
-          const user = window.EBECO.getCurrentUser?.() || {};
-          const name = user.name || user.displayName || "Usuario";
-          el.textContent = `Bienvenido ${name}`;
-          el.style.display = "block";
-          // Usuario logueado: estacionar con reconocimiento facial
-          linkEst.href = "verify-facial.html";
-          subEst.textContent = "Validación facial y registro del slot";
-          // Mostrar opciones de cuenta
-          if (linkHist) linkHist.style.display = "";
-          if (linkLiberar) linkLiberar.style.display = "";
-          return;
-        }
-
-        // Invitado
-        const isGuest = localStorage.getItem("ebeco-guest") === "1";
-        if (isGuest) {
-          el.textContent = "Bienvenido Invitado";
-          el.style.display = "block";
-          // Invitado: estacionar con PIN (no facial)
-          linkEst.href = "pin-invitado.html";
-          subEst.textContent = "Genera/usa PIN temporal para el candado";
-          // Ocultar opciones de cuenta
-          if (linkHist) linkHist.style.display = "none";
-          if (linkLiberar) linkLiberar.style.display = "none";
-          return;
-        }
-
-        // Fallback (sin estado claro): dejar visible y usar facial
-        linkEst.href = "verify-facial.html";
-        subEst.textContent = "Bloquea y registra tu bici en un slot";
-        if (linkHist) linkHist.style.display = "";
-        if (linkLiberar) linkLiberar.style.display = "";
       }
 
-      document.addEventListener("DOMContentLoaded", () => {
-        hydrateWelcomeBanner();
-        openSerialIfGranted();
-      });
+      // Llama al iniciar la pantalla
+      document.addEventListener("DOMContentLoaded", openSerialIfGranted);
     </script>
 
+    <!-- En tu HTML puedes tener un pequeño estado -->
     <div
       id="serialStatus"
       style="font-size: 0.9rem; opacity: 0.8; margin-top: 8px"
@@ -368,13 +175,4 @@
       Conectando…
     </div>
   </body>
-=======
-    // Llama al iniciar la pantalla
-    document.addEventListener('DOMContentLoaded', openSerialIfGranted);
-  </script>
-
-  <!-- En tu HTML puedes tener un pequeño estado -->
-  <div id="serialStatus" style="font-size:.9rem;opacity:.8;margin-top:8px">Conectando…</div>
-</body>
->>>>>>> parent of 8ebda87 (Historial y flujo)
 </html>
