--- a/paga-yape.html
+++ b/paga-yape.html
@@ -374,7 +374,7 @@
         }
 
         // 2) Redirigir ya (experiencia rápida)
-        window.location.href = "bicicleta-desbloqueada.html";
+        window.location.href = "seleccionar-accion.html";
 
         // 3) (Opcional) intentar mandar OPEN al Arduino si está disponible
         const ok = await ensureConnected();
