--- a/tiempo-transcurrido.html
+++ b/tiempo-transcurrido.html
@@ -66,7 +66,7 @@
 
         <!-- Botón de pagar -->
         <div class="actions">
-          <a class="btn btn--primary btn--lg" href="metodo-pago.html"
+          <a class="btn btn--primary btn--lg" href="bicicleta-desbloqueada.html"
             >Liberar bicicleta</a
           >
         </div>
