--- a/tiempo-transcurrido.html
+++ b/tiempo-transcurrido.html
@@ -113,6 +113,67 @@
       updateDisplay(); // Llamada inicial
     </script>
   </body>
+
+  <!-- Utilitario de historial (mismo formato que en otras páginas) -->
+  <script>
+    window.EBECO = window.EBECO || {};
+    (function () {
+      const KEY = "ebeco-history";
+      function load() {
+        try {
+          return JSON.parse(localStorage.getItem(KEY) || "[]");
+        } catch {
+          return [];
+        }
+      }
+      function save(list) {
+        localStorage.setItem(KEY, JSON.stringify(list));
+      }
+      function add({
+        type,
+        place,
+        at = new Date().toISOString(),
+        amount = null,
+      }) {
+        const list = load();
+        list.unshift({
+          id: crypto?.randomUUID
+            ? crypto.randomUUID()
+            : Date.now() + "-" + Math.random(),
+          type, // 'estacionar' | 'liberar'
+          place: place || "Sede desconocida",
+          at, // ISO string
+          amount, // número en soles o null
+        });
+        save(list.slice(0, 200)); // guarda máx. 200
+      }
+      function get() {
+        return load();
+      }
+      function clear() {
+        save([]);
+      }
+      EBECO.History = { add, get, clear };
+    })();
+
+    // Helpers comunes
+    function getPlaceContext() {
+      const params = new URLSearchParams(location.search);
+      if (params.get("place")) return params.get("place");
+      const cached = localStorage.getItem("ebeco-place");
+      if (cached) return cached;
+      return "Módulo A — UCSM"; // fallback
+    }
+
+    // Helper para leer el monto numérico desde "Total a pagar"
+    function getAmountNumberFromLabel() {
+      const raw =
+        document.getElementById("total-amount")?.textContent || "S/. 0.00";
+      const num = parseFloat(raw.replace(/[^\d.,-]/g, "").replace(",", "."));
+      return isNaN(num) ? 0 : num;
+    }
+  </script>
+
   <script>
     let port2 = null;
     let writer2 = null;
@@ -155,17 +216,30 @@
       }
     }
 
-    // Interceptar click del botón
+    // Interceptar click del botón "Liberar bicicleta"
     document
       .querySelector("a[href='bicicleta-desbloqueada.html']")
       .addEventListener("click", async (e) => {
         e.preventDefault(); // Detiene navegación inmediata
 
+        // 1) Guardar en historial la liberación con el monto calculado
+        try {
+          window.EBECO?.History?.add({
+            type: "liberar",
+            place: getPlaceContext(),
+            amount: getAmountNumberFromLabel(), // usa el "Total a pagar"
+          });
+        } catch (err) {
+          console.warn("No se pudo registrar el historial (liberar):", err);
+        }
+
+        // 2) Enviar comando UNLOCK al Arduino (si se puede)
         const ok = await conectarArduino();
         if (ok) {
           await enviarUnlock();
         }
 
+        // 3) Navegar a la pantalla de bicicleta desbloqueada
         setTimeout(() => {
           window.location.href = "bicicleta-desbloqueada.html";
         }, 500); // espera breve para que el comando salga
